// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spinner > Large story should render 1`] = `
<div
  className="inline-block animate-spin rounded-full border-4 border-solid border-current border-r-transparent align-[-0.125em] motion-reduce:animate-[spin_1.5s_linear_infinite] h-12 w-12"
  role="status"
>
  <span
    className="sr-only"
  >
    Loading...
  </span>
</div>
`;

exports[`Spinner > Medium story should render 1`] = `
<div
  className="inline-block animate-spin rounded-full border-4 border-solid border-current border-r-transparent align-[-0.125em] motion-reduce:animate-[spin_1.5s_linear_infinite] h-8 w-8"
  role="status"
>
  <span
    className="sr-only"
  >
    Loading...
  </span>
</div>
`;

exports[`Spinner > Small story should render 1`] = `
<div
  className="inline-block animate-spin rounded-full border-4 border-solid border-current border-r-transparent align-[-0.125em] motion-reduce:animate-[spin_1.5s_linear_infinite] h-4 w-4"
  role="status"
>
  <span
    className="sr-only"
  >
    Loading...
  </span>
</div>
`;

exports[`Spinner > WithLabel story should render 1`] = `
<div
  className="flex items-center gap-2"
>
  <div
    className="inline-block animate-spin rounded-full border-4 border-solid border-current border-r-transparent align-[-0.125em] motion-reduce:animate-[spin_1.5s_linear_infinite] h-4 w-4"
    role="status"
  >
    <span
      className="sr-only"
    >
      Loading...
    </span>
  </div>
  <span>
    Loading...
  </span>
</div>
`;
